--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ BlankSlate is distributed under the terms of the GNU GPL
 	
 	body { font-weight:normal; font-size:13px; background:#111111 !important;	color:#353535; font-weight:300;	font-family: 'Lato' sans-serif !important; background-attachment:fixed; }
 	
-	body, html { width:100%; height:100%; min-height:100%; }
+	body, html { width:100%; height:100%; min-height:100%; background:#111111 !important;}
 	.wrapper, .inner-wrapper, #main { width:100%; height:100%; }
 	.wrapper.inner-page { height:auto; }
 	
